--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                       <h3 class="h3 card-title">Cost Effective</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We do come up with the most affordable pricing options that fits everyone’s budget.
                       </p>
 
                     </div>
@@ -403,10 +403,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Dedicated Project Maneger</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        When in collaboration with us, you get dedicated project manager that deals only with your project to give you solutions that matches your requirements.
                       </p>
 
                     </div>
@@ -422,7 +422,7 @@
                       <h3 class="h3 card-title">Customised Solutions</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Our diverse team thrives on open communication and shared goals on providing a customised approach for every client. 
                       </p>
 
                     </div>
@@ -438,7 +438,7 @@
                       <h3 class="h3 card-title">White Hat SEO Technique</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We promote ethical SEO tactics that increase your website's organic exposure, assuring long-term development and success while maintaining integrity and user experience.
                       </p>
 
                     </div>
@@ -454,7 +454,7 @@
                       <h3 class="h3 card-title">Soaring Conversion Rate</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We address user behaviour and turn visitors into constant customers to increase conversion rates
                       </p>
 
                     </div>
@@ -467,10 +467,10 @@
                         <ion-icon name="headset-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Free Support</h3>
+                      <h3 class="h3 card-title">24x7 Support</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Need 24x7 free support? We are the answer to your worries as we provide free support all round the clock.
                       </p>
 
                     </div>
