--- a/index.html
+++ b/index.html
@@ -373,9 +373,7 @@
                 <h2 class="h2 section-title">Why choose Us!</h2>
 
                 <p class="section-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-                  development of
-                  the asset through its charitable foundation.
+                  We combine creativity and analytics for delivering tailored digital marketing solutions. Our strategies thus enhance brand building, accelerate sales, as well as connects you with your target audience, all driven by the innovative ideas from our dedicated pool of experts.
                 </p>
 
                 <ul class="about-list">
@@ -541,7 +539,7 @@
         - #CTA
       -->
 
-      <div class="testimonials-section">
+      <section class="testimonials-section">
 
         <!-- Section Header Starts -->
         <header class="section-header">
@@ -740,10 +738,11 @@
         </div>
         <!-- Owl Carousel Slider Ends -->
 
-        <button id="reviewButton" class="review-btn"><img src="./assets/img/RATING US white font.png" alt="rating"
-            class="review-icon"></button>
-
+        <div class="button-container">
+          <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
       </div>
+
+      </section>
 
       <div class="social-button whatsapp">
         <img src="./assets/img/whatsapp.png" alt="WhatsApp">
