--- a/seo.html
+++ b/seo.html
@@ -686,8 +686,9 @@
           </div>
           <!-- Owl Carousel Slider Ends -->
 
-          <button id="reviewButton" class="review-btn"><img src="./assets/img/RATING US white font.png" alt="rating"
-              class="review-icon"></button>
+          <div class="button-container">
+            <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
+        </div>
 
 
         </div>
