--- a/carrer.html
+++ b/carrer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>career</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
-    <link rel="shortcut icon" href="Screenshot verify.png" type="image/svg+xml">
+    <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
 
     <!-- *******  Owl Carousel Links  ******* -->
     <link rel="stylesheet"
