--- a/graphics.html
+++ b/graphics.html
@@ -13,7 +13,7 @@
   <!-- -
     - favicon link
   -->
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
