--- a/seo.html
+++ b/seo.html
@@ -13,7 +13,7 @@
   <!-- -
     - favicon link
   -->
-  <link rel="shortcut icon" href="Screenshot verify.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
 
   <!-- 
     - custom css link
