--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@
   <title>All Services</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
-  <link rel="shortcut icon" href="Screenshot verify.png" type="image/svg+xml">
+  <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
 
   <!-- *******  Owl Carousel Links  ******* -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
