--- a/team.html
+++ b/team.html
@@ -7,6 +7,8 @@
   <title>Team</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
 
+  <link rel="shortcut icon" href="favicon-icon.png" type="image/svg+xml">
+
   <!-- *******  Owl Carousel Links  ******* -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
