--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Digital marketing company in Bhubaneswar</h1>
+            <h1 class="h1 hero-title">Your Trusted Digital Marketing Company</h1>
 
             <p class="hero-text">
               Where Creativity meets Digital Excellence to Elevate your Online Presence.
@@ -770,7 +770,7 @@
       <section class="contact" id="contact">
       
           <div class="contact-box">
-            <h2 class="contact-title">Connect with Us</h2>
+            <h2 class="contact-title">Connect With Us</h2>
             <p class="contact-description">
               We're excited to help you scale your brand! Reach out to us, and let's create something amazing together.
             </p>
