--- a/graphics.html
+++ b/graphics.html
@@ -191,9 +191,7 @@
             <h2 class="h2 section-title">Our Services</h2>
 
             <p class="section-text">
-              Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-              development of
-              the asset through its charitable foundation.
+              At Verify Ads, we know that good design lies at the core of successful online advertising and marketing campaigns. Our graphic design services are all about helping you and your business build and capture the attention of your people. Here’s how we can help you stand out.
             </p>
 
             <ul class="about-list">
@@ -208,8 +206,7 @@
                   <h3 class="h3 card-title">Brand Identity Design</h3>
 
                   <p class="card-text">
-                    Search engines are constantly updating their algorithms. This content is building for users, Click
-                    Through Rates, Usability, Keywords Strategy, Interlinking
+                    Make a stand with a consistent brand image. Our team designs and develops logos, colour codes and typography in line with your business values and goals to ensure that the public easily identifies your brand.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -226,8 +223,7 @@
                   <h3 class="h3 card-title">Infographics</h3>
 
                   <p class="card-text">
-                    Building a high-quality and relevant backlink is driven heavy traffic that is the final step to
-                    ensure you are well
+                    Transform complex information into engaging visuals. Our infographics make your data easy to grasp and enhances understanding, thus making your content more shareable and impactful.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -241,11 +237,10 @@
                     <ion-icon name="megaphone-outline"></ion-icon>
                   </div>
 
-                  <h3 class="h3 card-title">Advertising Graphics</h3>
+                  <h3 class="h3 card-title">Social Media Graphics</h3>
 
                   <p class="card-text">
-                    Web pages are technically improved such as speed, crawlability, URLs structure, website code
-                    quality, and website security.
+                    Boost your social media presence with eye-catching graphics tailored for each platform. Whether it is creating a post or telling a story, we create aesthetics that will help create engagement amongst the audience.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -349,12 +344,10 @@
 
               <div class="choose-top">
 
-                <h2 class="h2 section-title">Why choose Us!</h2>
+                <h2 class="h2 section-title">Why Choose Verify Ads?</h2>
 
                 <p class="section-text">
-                  Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back into the
-                  development of
-                  the asset through its charitable foundation.
+                  With a focus on creativity and strategy, our graphic design services are designed to not only look great but also drive results. Walk with us and achieve your unique goals of making your brand unstoppably stand out.
                 </p>
 
                 <ul class="about-list">
@@ -366,10 +359,10 @@
                         <ion-icon name="pricetag-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Cost Effective</h3>
+                      <h3 class="h3 card-title">Creative Excellence</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        Innovative design services provided by our expert team can enhance your brand image and draw the customers’ focus.
                       </p>
 
                     </div>
@@ -382,10 +375,10 @@
                         <ion-icon name="person-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Dedicated a Project Maneger</h3>
+                      <h3 class="h3 card-title">Strategic Approach</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We combine design with marketing insights to ensure your visuals effectively reach your audience.
                       </p>
 
                     </div>
@@ -398,63 +391,16 @@
                         <ion-icon name="sync-outline"></ion-icon>
                       </div>
 
-                      <h3 class="h3 card-title">Team Collaboration</h3>
+                      <h3 class="h3 card-title">Collaborative Process</h3>
 
                       <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
+                        We collaborate with you every step of the way, ensuring your vision is reflected in every design. 
                       </p>
 
                     </div>
                   </li>
 
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="ribbon-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">White Hat SEO Technique</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="trending-up-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Soaring Conversion Rate</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
-                  <li>
-                    <div class="chooseus-card">
-
-                      <div class="card-icon">
-                        <ion-icon name="headset-outline"></ion-icon>
-                      </div>
-
-                      <h3 class="h3 card-title">Free Support</h3>
-
-                      <p class="card-text">
-                        Each time a digital asset is purchased or sold, Sequoir donates a percentage of the fees back
-                      </p>
-
-                    </div>
-                  </li>
-
+                  
 
                 </ul>
 
