--- a/localization.html
+++ b/localization.html
@@ -72,7 +72,7 @@
     </div>
     <div class="container">
 
-      <!-- <a href="#" class="logo"> -->
+      <a href="index.html" class="logo">
       <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
