--- a/promotion.html
+++ b/promotion.html
@@ -73,7 +73,7 @@
 
     <div class="container">
 
-      <!-- <a href="#" class="logo"> -->
+      <a href="index.html" class="logo">
         <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
