--- a/paidadd.html
+++ b/paidadd.html
@@ -73,7 +73,7 @@
     <div class="container">
 
       <a href="index.html" class="logo">
-      <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
+        <img src="./assets/img/verify_ads_png.png" alt="verifyads" class="logo">
       </a>
 
       <div class="navbar-wrapper">
@@ -192,7 +192,9 @@
             <h2 class="h2 section-title">Our Services</h2>
 
             <p class="section-text">
-              At Verify Ads, we specialize in delivering results-driven paid advertising solutions that are tailored for your unique business needs. With a deep understanding of the digital landscape, our expert team creates campaigns that not only do capture the attention but also converts clicks into customers.
+              At Verify Ads, we specialize in delivering results-driven paid advertising solutions that are tailored for
+              your unique business needs. With a deep understanding of the digital landscape, our expert team creates
+              campaigns that not only do capture the attention but also converts clicks into customers.
             </p>
 
             <ul class="about-list">
@@ -207,7 +209,8 @@
                   <h3 class="h3 card-title">Search Engine Advertising (PPC)</h3>
 
                   <p class="card-text">
-                    Utilize services like Google Ads placing your business at the top of search results. Enjoy the highly targeted approach, budget control and get tangible results.
+                    Utilize services like Google Ads placing your business at the top of search results. Enjoy the
+                    highly targeted approach, budget control and get tangible results.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -224,7 +227,8 @@
                   <h3 class="h3 card-title">Social Media Advertising</h3>
 
                   <p class="card-text">
-                    Engage users where they spend most of their time. Our team creates visually appealing ads on networks such as Facebook, Instagram, LinkedIn and X for enhancement of brand recognition.
+                    Engage users where they spend most of their time. Our team creates visually appealing ads on
+                    networks such as Facebook, Instagram, LinkedIn and X for enhancement of brand recognition.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -241,7 +245,8 @@
                   <h3 class="h3 card-title">Display Advertising</h3>
 
                   <p class="card-text">
-                    Utilize banner ads to capture attention on websites across the internet. Retarget potential customers who have previously interacted with your brand, increasing conversion rates.
+                    Utilize banner ads to capture attention on websites across the internet. Retarget potential
+                    customers who have previously interacted with your brand, increasing conversion rates.
                   </p>
 
                   <a href="https://www.example.com" class="btn btn-primary">Explore</a>
@@ -359,7 +364,8 @@
                       <h3 class="h3 card-title">Increase Visibility</h3>
 
                       <p class="card-text">
-                        Our advertising can place your brand effectively in front of your desired target group of consumers promptly.
+                        Our advertising can place your brand effectively in front of your desired target group of
+                        consumers promptly.
 
                     </div>
                   </li>
@@ -396,7 +402,7 @@
                     </div>
                   </li>
 
-                 
+
 
 
                 </ul>
@@ -625,7 +631,7 @@
 
           <div class="button-container">
             <button id="reviewButton" class="btn btn-primary">REVIEW US</button>
-        </div>
+          </div>
 
         </div>
 
