--- a/team.html
+++ b/team.html
@@ -164,7 +164,7 @@
 
   <div class="team-join-panel">
     <div class="join-text">WANT TO JOIN THE TEAM?</div>
-    <button class="view-openings-btn" onclick="openCareerPage()">VIEW OPENINGS &rsaquo;</button>
+    <button class="btn btn-primary" onclick="openCareerPage()">VIEW OPENINGS &rsaquo;</button>
   </div>
 
 
